tests/reference/ast-loop_test1-7800c18.stderr
tokenizer error: Expecting terminating symbol for program
 --> tests/loop_test1.f:4:1
  |
4 | <<<<<<< HEAD
  | ^ 
